--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "codegen": "graph codegen --output-dir src/types/",
     "build": "graph build",
-    "create-local": "graph create uniscam/swap --node http://127.0.0.1:8020",
-    "create-bscgraph": "graph create uniscam/swap-test2 --node https://api.bscgraph.org/deploy/",
-    "deploy-local": "graph deploy uniscam/swap --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
-    "deploy": "graph deploy uniscam/swap-test2 --ipfs https://ipfs.infura.io:5001/ --node https://api.bscgraph.org/deploy/ --debug",
+    "create-local": "graph create taxifinance/taxi-subgraph --node http://127.0.0.1:8020",
+    "create-bscgraph": "graph create taxifinance/taxi-subgraph --node https://api.bscgraph.org/deploy/",
+    "deploy-local": "graph deploy taxifinance/taxi-subgraph --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
+    "deploy": "graph deploy taxifinance/taxi-subgraph --ipfs https://ipfs.infura.io:5001/ --node https://api.bscgraph.org/deploy/ --debug",
     "deploy-staging": "graph deploy $THE_GRAPH_GITHUB_USER/$THE_GRAPH_SUBGRAPH_NAME /Uniswap --ipfs https://api.staging.thegraph.com/ipfs/ --node https://api.staging.thegraph.com/deploy/",
-    "watch-local": "graph deploy uniscam/swap --watch --debug --node http://127.0.0.1:8020/ --ipfs http://localhost:5001"
+    "watch-local": "graph deploy taxifinance/taxi-subgraph --watch --debug --node http://127.0.0.1:8020/ --ipfs http://localhost:5001"
   },
   "devDependencies": {
     "@graphprotocol/graph-cli": "^0.16.0",
